// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders drilldown item correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderBottomColor": "#E6E8EC",
            "borderBottomWidth": 1,
            "padding": 13,
          },
          null,
        ],
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "flex": 1,
            "fontSize": 14,
          },
        ]
      }
    >
      Test Step
    </Text>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
              "paddingRight": 16,
              "textAlign": "right",
              "width": 375,
            },
          ]
        }
      >
        Preview
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#B2B0B2",
                "fontSize": 18,
                "paddingRight": 10,
              },
            ],
            Object {
              "fontFamily": "icomoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders selected switch item correctly 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderBottomColor": "#E6E8EC",
          "borderBottomWidth": 1,
          "padding": 13,
        },
        Object {
          "paddingVertical": 7,
        },
      ],
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "flex": 1,
          "fontSize": 14,
        },
      ]
    }
  >
    Test Step
  </Text>
</View>
`;

exports[`renders single item correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderBottomColor": "#E6E8EC",
            "borderBottomWidth": 1,
            "padding": 13,
          },
          null,
        ],
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "flex": 1,
            "fontSize": 14,
          },
        ]
      }
    >
      Test Step
    </Text>
  </View>
</View>
`;

exports[`renders switch item correctly 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderBottomColor": "#E6E8EC",
          "borderBottomWidth": 1,
          "padding": 13,
        },
        Object {
          "paddingVertical": 7,
        },
      ],
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "flex": 1,
          "fontSize": 14,
        },
      ]
    }
  >
    Test Step
  </Text>
</View>
`;
